@@ -6,6 +6,10 @@ Sobald Daniel das Framework fertig hat:
 
 == Nicht so wichtig ==
 
+Informationen aus Reverse Lookup besser zerlegen: Name, Adresse, formatierte
+Telefonummer, ...
+    -> braucht ein flexibleres Telefonbuch
+
 title bei d.*popup/message (?) parametrisierbar machen
 
 ar7cfgconv-"Parser" separieren
